Changelog
=========

3.4 (Unreleased)
----------------
- Compatilbity with new plone.batching [kiorky]

- Preserve Link with URL as text instead of creating nesting "a" nodes. 
  Issue #10 at https://github.com/collective/Products.Ploneboard/issues/10
  Allow URI with round brackets. Issue #7
  [ksuess]

- Updated Spanish translations
  [macagua]

- Updated i18n support, adding i18n sentences for translation strings, synced
  the pot files and updated the po files.
  [macagua]

- Fix issue #11 at https://github.com/collective/Products.Ploneboard/issues/11
  [macagua]

- Fix issue #9 at https://github.com/collective/Products.Ploneboard/issues/9
  [sureshvv]

- Make pb_attachment a resource js file rather than dtml
  [sureshvv]

- Add forum property that will enable members to edit their own comments
  [sureshvv]

- Fixed imports for Plone 4.3
  [kroman0]

- Fixed i18n headers, added locales folder and updated pt-br translations
  [davilima6]

- Add button label to start a new conversation instead of reusing the "add comment"
  label.
  [gaudenz]

- Don't show workflow actions and reply button while composing a reply.
  [gaudenz]

- Fix compatibility with classic (non Chameleon) Zope template engine
  [gaudenz]

- Remove "Quick Reply" label. From the users point of view this is just
  a normal reply.
  [gaudenz]

- Do no swallow ConflictError anymore [keul]

- Update number of comments looking at the current users permissions
  (before this the number were updated even if a comment was not published)
  [cekk]

- Fixed forum view: always display the third column in forum view
  [keul]

- Rejected comments can now be modified from owners before submitting again
  [keul]

- Added support for "Site Administrator" role
  [keul]

- Forum area is not visible to users (even if published) if inside private
  folders
  [keul]

- Allowed translations for "Anonymous" comment in ploneboard views [cekk]
